# c4ai-ml-agents-v2

./: .env.example  .gitignore  AGENTS.md  Claude.md  Makefile  README.BENCHMARKS.md  README.md  alembic.ini  pyproject.toml
documentation/: README.md  adr-marvin-vs-outlines-structured-output.md  adr-serialization-error-handling.md  structured-output-analysis.md  structured-output-implementation-clarity.md  structured-output-parsing-bdd-plan.md  structured-output-parsing-bdd-test-data.md  token-usage-removal-plan.md  v2-agents.md  v2-application-services-architecture.md  v2-cli-design.md  v2-core-behaviour-definition.md  v2-data-model.md  v2-domain-model.md  v2-infrastructure-requirements.md  v2-paper-to-implementation-process.md  v2-project-structure.md  v2-reasoning-domain-logic.md  v2-structured-output-parsing-types.md  v2-task-tracker.md  v2-testing-strategy.md  v2-ubiquitous-language.md
src/ml_agents_v2/: __init__.py
src/ml_agents_v2/cli/: __init__.py  main.py
src/ml_agents_v2/cli/commands/: benchmark.py  evaluate.py  health.py
src/ml_agents_v2/config/: application_config.py
src/ml_agents_v2/core/application/: __init__.py
src/ml_agents_v2/infrastructure/: acl_reasoning_orchestrator.py  app_composition_container.py  container.py  health.py  health_checker.py  logging_config.py  parsing_factory.py  reasoning_service.py
tests/: conftest.py
tests/acceptance/: test_benchmark_commands.py  test_cli_basic.py  test_evaluate_commands.py  test_evaluate_show_command.py
tests/bdd/fixtures/: structured_output_fixtures.py
tests/bdd/unit/: conftest.py
tests/fixtures/: __init__.py  structured_output_fixtures.py
tests/quality_gates/: __init__.py  conftest.py  test_placeholder.py
tests/quality_gates/acceptance/: test_benchmark_commands.py  test_evaluate_export_command.py  test_health_command.py
tests/quality_gates/fixtures/: __init__.py
tests/unit/application/: conftest.py  test_dtos.py  test_error_mapper.py  test_evaluation_orchestrator.py  test_evaluation_orchestrator_show_fix.py  test_integration.py
tests/unit/cli/: test_evaluate_utilities.py
tests/unit/config/: __init__.py  test_application_config.py
tests/unit/domain/: test_answer.py  test_chain_of_thought_agent_service.py  test_evaluation.py  test_evaluation_results.py  test_none_agent_service.py  test_preprocessed_benchmark.py  test_preprocessed_benchmark_repository.py  test_question.py  test_reasoning_agent_factory.py  test_reasoning_agent_service.py  test_reasoning_trace.py  test_repository_exceptions.py
tests/unit/infrastructure/: test_alembic_setup.py  test_container.py  test_database_models.py  test_openrouter_acl.py  test_openrouter_client.py  test_parsing_factory.py  test_repositories.py  test_structured_output_bdd.py
(+133 files in other folders)
